# airflow_log_cleanup

./: HOWTO.md  LICENSE  README.md  log_clean.py  log_clean_v2.09.py  log_clean_v2.10.py  pyproject.toml
.github/workflows/: log-clean-ci.yml
tests/: conftest.py  test_log_clean_runtime.py  test_log_clean_smoke.py
